# super-agent

./: .env.example  .gitattributes  .gitignore  BACKUP_MANIFEST.md  BLUEPRINT.md  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.cli  Dockerfile.website  Dockerfile.website2  GEMINI.md  INSTALL_GUIDE.md  README.md  RECOVERY_AUDIT.md  ROLLBACK_GUIDE.md  docker-compose.yml  entrypoint.api.sh  entrypoint.cli.sh  entrypoint.sh  legion_config.yaml  make_transparent.py  nginx-website.conf  nginx-website2.conf  nginx.cli.conf.template  nginx.conf  nginx.conf.template  pyproject.toml  railway.website.toml  railway.website2.toml  remove_bg.py  requirements.txt  standalone_login.py  supervisord.api.conf  supervisord.cli.conf  supervisord.conf  test.md
.devcontainer/: devcontainer.json
app/: activity_log.py  auth.py  client_portal_api.py  config.py  db.py  log_config.json  main.py  monitoring_api.py  prompts.py  sprite_upload.py
cli_worker/: main.py  migrations.py  requirements.txt  task_runner.py
lovable_website_version/: index.html  tailwind.config.ts  tsconfig.app.tsbuildinfo
migrations/: README.md
mobile/: pubspec.yaml
n8n/: BRIDGE_EXEC_BOTS_README.md  agent_health_monitor.json  bridge_agent_memos_schema.sql  bridge_anomaly_detector.json  bridge_arch_migration.json  bridge_business_development_bot.json  bridge_ceo_bot.json  bridge_chief_of_staff_bot.json  bridge_chief_revenue_optimizer_bot.json  bridge_chief_sec_off_bot.json  bridge_cleaner_bot.json  bridge_company_schema.sql  bridge_cro_revenue_engine.json  bridge_cto_bot.json  bridge_enterprise_cadence.json  (+43 more)
(+451 files in other folders)
